*Fix badge display on selectivity overflow.

--- a/assets/opstools/AppBuilder/AppBuilder.css
+++ b/assets/opstools/AppBuilder/AppBuilder.css
@@ -314,7 +314,7 @@ div[view_id='ab-frozen-field-list'] div.webix_list_item:hover {
 	background: none !important;
 	padding: 0px !important;
 	overflow: hidden !important;
-	max-height: 100% !important;
+	/*max-height: 100% !important;*/
 }
 .selectivity-multiple-selected-item {
 	background: #3498db !important;
